Some final Yash Erior Updates

--- a/user.html
+++ b/user.html
@@ -8,6 +8,10 @@
   <title>SPSU Sports Erp</title>
 
   <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
+
+  <!-- Navbar for user pages css -->
+   <link rel="stylesheet" href="css/user/navbar.css">
+
   <link rel="stylesheet" href="css/user/userpage.css" />
   <link rel="stylesheet" href="css/golbal.css">
 
