--- a/pages/user/myrequest.html
+++ b/pages/user/myrequest.html
@@ -8,8 +8,12 @@
   <title>Your Requests</title>
 
   <link rel="shortcut icon" href="/assets/spsu/favicon.png" type="png">
-  <link rel="stylesheet" href="/css/user/myrequest.css" />
-  <link rel="stylesheet" href="/css/golbal.css">
+
+  <!-- Navbra css for all users pages -->
+  <link rel="stylesheet" href="../../css/user/navbar.css">
+
+  <link rel="stylesheet" href="../../css/user/myrequest.css" />
+  <link rel="stylesheet" href="../../css/golbal.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -36,24 +40,31 @@
           <!-- Navigation items -->
 
           <div class="nav-holder">
-            <a class="nav-title">MENU</a>
-            <div class="nav-items">
-              <li><a class="close-menu" onclick="document.getElementById('menu-toggle').checked = false;"><i
-                    class="bi bi-caret-left-fill"></i></a></li>
-              <li onclick="document.getElementById('menu-toggle').checked = false;"><a href="/user.html"><i
-                    class="bi bi-house-fill"></i>Home</a></li>
-              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
-                    class="bi bi-cart-plus-fill"></i>My Requests</a></li>
-              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
-                    class="bi bi-broadcast"></i>Events</a></li>
-              <li><a onclick="document.getElementById('menu-toggle').checked = false; downloadApp()"><i
-                    class="bi bi-arrow-down-circle-fill"></i>Download App</a></li>
-              <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
-                    class="bi bi-question-circle-fill"></i>About us</a></li>
+
+            <div class="nav-hold1">
+              <a class="nav-title">MENU</a>
+              <div class="nav-items">
+                <li><a class="close-menu" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                      class="bi bi-caret-left-fill"></i></a></li>
+                <li onclick="document.getElementById('menu-toggle').checked = false;"><a href="../../user.html"><i
+                      class="bi bi-house-fill"></i>Home</a></li>
+                <li><a href="" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                      class="bi bi-cart-plus-fill"></i>My Requests</a></li>
+                <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                      class="bi bi-broadcast"></i>Events</a></li>
+                <li><a onclick="document.getElementById('menu-toggle').checked = false; downloadApp()"><i
+                      class="bi bi-arrow-down-circle-fill"></i>Download App</a></li>
+                <li><a href="#" onclick="document.getElementById('menu-toggle').checked = false;"><i
+                      class="bi bi-question-circle-fill"></i>About us</a></li>
+              </div>
             </div>
-            <a class="pow-by">
-              <i class="bi bi-lightning-fill"></i>Powered by SPSU
-            </a>
+
+            <div class="nav-hold2">
+              <a class="pow-by">
+                <i class="bi bi-lightning-fill"></i> Powerd by SPSU
+              </a>
+            </div>
+
           </div>
 
           <!-- Logout Btn -->
