--- a/user.html
+++ b/user.html
@@ -10,10 +10,29 @@
   <link rel="shortcut icon" href="assets/spsu/favicon.png" type="png">
 
   <!-- Navbar for user pages css -->
-   <link rel="stylesheet" href="css/user/navbar.css">
+  <link rel="stylesheet" href="css/user/navbar.css">
 
   <link rel="stylesheet" href="css/user/userpage.css" />
   <link rel="stylesheet" href="css/golbal.css">
+
+  <style>
+    /* Skeleton loading styles */
+    .skeleton {
+      background-color: #e0e0e0;
+      border-radius: 4px;
+      margin-bottom: 10px;
+      width: 100%;
+      height: 100px;
+    }
+
+    .skeleton-text {
+      width: 60%;
+      height: 15px;
+      background-color: #ccc;
+      margin-top: 10px;
+      border-radius: 4px;
+    }
+  </style>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -85,10 +104,13 @@
 
 
     <div id="sports-container">
-      <!-- Dynamic insertion -->
+      <div id="skeleton-sports" class="skeleton"></div>
+      <div id="skeleton-sports-text" class="skeleton-text"></div>
     </div>
+    
     <div id="items-container" style="display: none;">
-      <!-- Dynamic insertion -->
+      <div id="skeleton-items" class="skeleton"></div>
+      <div id="skeleton-items-text" class="skeleton-text"></div>
     </div>
   </section>
 
