Dynamic Script loading for admin page

--- a/user.html
+++ b/user.html
@@ -18,7 +18,7 @@
   <style>
     /* Skeleton loading styles */
     .skeleton {
-      background-color: #e0e0e0;
+      background-color: #909090;
       border-radius: 4px;
       margin-bottom: 10px;
       width: 100%;
@@ -28,7 +28,7 @@
     .skeleton-text {
       width: 60%;
       height: 15px;
-      background-color: #ccc;
+      background-color: #b0b0b0;
       margin-top: 10px;
       border-radius: 4px;
     }
