--- a/admin.html
+++ b/admin.html
@@ -257,7 +257,7 @@
     <!-- JS For auth bypass -->
     <script type="module" src="javascript/module/admin/admin-page-auth.js"></script>
 
-    <!-- Control pannel swithing js -->
+    <!-- Control pannel Dyanmic script loading -->
     <script src="javascript/normal/admin/admincontent.js"></script>
 
 
